--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,152 @@
+
 .App {
+  height: 100vh;
+}
+
+.container {
+  height: 100%;
+  text-align: center;
+
+}
+
+.d-flex {
+  display: flex;
+}
+.padding{
+  padding: 20px;
+}
+.space-btw {
+  justify-content: space-between;
+}
+
+.a-center {
+  align-items: center;
+}
+
+.space-around {
+  justify-content: space-around;
+}
+
+
+.column {
+  flex-direction: column;
+}
+
+.j-center {
+  justify-content: center;
+}
+
+input{
+  margin: 5px;
+  width: 200px;
+}
+
+.text-center {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.toolbar {
+  height: 100px;
+  border-bottom: 2px solid gray;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button:hover  {
+  cursor: pointer;
+  background-color: mediumaquamarine;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.p-50 {
+  padding: 50px;
+}
+.card{
+  height: 400px;
+  width: 250px;
+  border: 2px solid gray;
+  padding: 25px;
+  margin-top: 25px;
+}
+.offerCard{
+  size: auto;
+}
+.aparticon img{
+  height: 100px;
+}
+
+.box0 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-content: center;
+}
+.box1 {
+  border: 1px solid cadetblue;
+  margin: 10px;
+  padding: 10px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.box2 {
+  border: 1px solid cadetblue;
+  margin: 10px;
+  padding: 10px;
+  display: flex;
+}
+.box3 {
+  background-color: goldenrod;
+  margin: 10px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.pictureBox {
+  border:1px solid black;
+  margin: 10px;
+  padding: 10px;
+  display: flex;
+  overflow-x: scroll;
+}
+.inp {
+  width: 200px;
+  margin: 5px;
+  height: 20px;
+}
+.inp1 {
+  width: 100px;
+  margin: 5px;
+  height: 20px;
+}
+.btn {
+  margin: 10px;
+}
+.btn1 {
+  margin: 0 5px 0 5px;
+}
+.img {
+  height: 100px;
+  margin: 5px;
+}
+.img1 {
+  height: 200px;
+  margin: 5px;
+}
+.img2 {
+  height: 150px;
+  margin: 5px;
+}
+.wrap {
+  flex-wrap: wrap;
+}
+.main-cover {
+  padding: 130px 0 130px 0;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  background-image: url("https://cdn.pixabay.com/photo/2017/01/20/00/30/maldives-1993704__480.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.m-20{
+  margin: 20px;
 }
